...
                                                </connections>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NEW GAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9E-tv-0de">
                                                <rect key="frame" x="111.5" y="133" width="152.5" height="36"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="30"/>
...
                                                </connections>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STATISTICS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wdS-wo-N6H">
                                                <rect key="frame" x="112" y="133" width="151.5" height="36"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="30"/>
...
                        <outlet property="newGameImageView" destination="gmh-xZ-Yf0" id="x7m-c8-gwF"/>
                        <outlet property="statisticsImageView" destination="WIh-Ng-Tpg" id="FOj-ho-V3C"/>
                        <segue destination="8UJ-Vg-4AY" kind="show" identifier="New Game" id="Hfe-PA-5ME"/>
                        <segue destination="EoM-ak-uK3" kind="show" identifier="Statistics" id="J0F-47-ano"/>
                    </connections>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="302" height="54.5"/>
                                                        <subviews>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Player 1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kkt-bb-Oiz">
                                                                <rect key="frame" x="0.0" y="0.0" width="302" height="52.5"/>
                                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        </constraints>
                                                    </stackView>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Player 2" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EGO-du-PPz">
                                                        <rect key="frame" x="0.0" y="54.5" width="302" height="54.5"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <color key="backgroundColor" name="darkBlue"/>
                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                                        <state key="normal" title="START">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
...
