...
    }

    func setupNavbar() {
        navigationItem.setHidesBackButton(true, animated: true)
        navigationItem.title = "Game \(currentGame.gameNumber)"
        navigationItem.leftBarButtonItem = UIBarButtonItem(
            title: "Exit",
            style: .plain,
            target: self,
            action: #selector(GameViewController.presentLosingStatsAlert(_:)
            ))
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            title: "Next Game",
...
            playerTwoTechs.overLimit()
        default: break
        }
    }

    @objc func presentLosingStatsAlert(_ button: UIBarButtonItem) {
        let title = "Oh no, the stats!"
        let message = "You must finish the series for them to be saved."
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        let exitAction = UIAlertAction(title: "Exit", style: .destructive, handler: { [weak self] (alert) in
            self?.currentGame.resetStats()
            self?.popToFirstVC()
        })
...
